--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
   "dependencies": {
     "@mapbox/polyline": "^1.1.1",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.2.0",
+    "@react-navigation/drawer": "^5.11.4",
+    "@react-navigation/native": "^5.8.10",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-elements": "^3.0.0",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-maps": "0.27.1",
-    "react-native-responsiveness": "^0.1.7"
+    "react-native-reanimated": "^1.13.2",
+    "react-native-responsiveness": "^0.1.7",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
+    "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
