--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^10.2.0",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-elements": "^3.0.0",
