--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.2.0",
+    "@react-native-firebase/auth": "^10.3.1",
+    "@react-native-firebase/firestore": "^10.3.1",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
